--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pinia": "^2.0.11",
     "reset-css": "^5.0.1",
     "vue": "^3.2.31",
+    "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
