--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@vuelidate/core": "^2.0.0-alpha.37",
+    "@vuelidate/validators": "^2.0.0-alpha.28",
     "pinia": "^2.0.11",
     "reset-css": "^5.0.1",
     "vue": "^3.2.31",
