--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --watch",
+    "build": "vite build --watch --mode development",
     "preview": "vite preview --port 5050",
     "test:unit": "vitest --environment jsdom",
     "test:e2e": "start-server-and-test preview http://127.0.0.1:5050/ 'cypress open'",
@@ -22,7 +22,8 @@
     "reset-css": "^5.0.1",
     "vue": "^3.2.31",
     "vue-i18n": "^9.1.9",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue3-parallax": "^0.1.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
