--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@kyvg/vue3-notification": "^2.3.4",
     "@vuelidate/core": "^2.0.0-alpha.37",
     "@vuelidate/validators": "^2.0.0-alpha.28",
     "pinia": "^2.0.11",
