--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "vue": "^3.2.31",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.12",
-    "vue3-parallax": "^0.1.3"
+    "vue3-mq": "^3.1.0",
+    "vue3-parallax": "^0.1.3",
+    "vue3-smooth-scroll": "^0.8.1",
+    "vue3-smooth-scrollbar": "^1.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
