--- a/package.json
+++ b/package.json
@@ -11,38 +11,38 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/vue-fontawesome": "^3.0.0-5",
-    "@kyvg/vue3-notification": "^2.3.4",
-    "@vuelidate/core": "^2.0.0-alpha.37",
-    "@vuelidate/validators": "^2.0.0-alpha.28",
-    "pinia": "^2.0.11",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@kyvg/vue3-notification": "^2.9.0",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
+    "pinia": "^2.0.35",
     "reset-css": "^5.0.1",
-    "vue": "^3.2.31",
-    "vue-i18n": "^9.1.9",
-    "vue-router": "^4.0.12",
-    "vue3-mq": "^3.1.0",
-    "vue3-parallax": "^0.1.3",
+    "vue": "^3.2.47",
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.1.6",
+    "vue3-mq": "^3.1.3",
+    "vue3-parallax": "^0.1.4",
     "vue3-smooth-scroll": "^0.8.1",
     "vue3-smooth-scrollbar": "^1.0.2"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.0",
-    "@vitejs/plugin-vue": "^2.2.2",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/test-utils": "^2.0.0-rc.18",
-    "cypress": "^9.5.0",
-    "eslint": "^8.5.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-vue": "^8.2.0",
-    "http-server": "^14.1.0",
-    "jsdom": "^19.0.0",
-    "prettier": "^2.5.1",
-    "start-server-and-test": "^1.14.0",
-    "vite": "^2.8.4",
-    "vitest": "^0.5.0"
+    "@rushstack/eslint-patch": "^1.2.0",
+    "@vitejs/plugin-vue": "^4.2.1",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/test-utils": "^2.3.2",
+    "cypress": "^12.11.0",
+    "eslint": "^8.39.0",
+    "eslint-plugin-cypress": "^2.13.2",
+    "eslint-plugin-vue": "^9.11.0",
+    "http-server": "^14.1.1",
+    "jsdom": "^21.1.1",
+    "prettier": "^2.8.8",
+    "start-server-and-test": "^2.0.0",
+    "vite": "^4.3.3",
+    "vitest": "^0.30.1"
   }
 }
