--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-page",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build --mode development",
     "preview": "vite preview --port 5050",
     "test:unit": "vitest --environment jsdom",
